# handler/user_handler.go
@@ -1,8 +1,105 @@
 package handler
 
 import (
+	"bytes"
+	"encoding/json"
+	"github.com/TPM-Project-Larces/agent.git/schemas"
 	"github.com/gin-gonic/gin"
+	"net/http"
 )
+
+// @BasePath /
+// @Summary Create user
+// @Description Create a new user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param request body schemas.CreateUserRequest true "Request body"
+// @Success 200 {object} schemas.CreateUserResponse
+// @Failure 400 {string} string "bad_request"
+// @Failure 500 {string} string "internal_server_error"
+// @Router /user [post]
+func CreateUser(ctx *gin.Context) {
+	request := schemas.CreateUserRequest{}
+	ctx.BindJSON(&request)
+
+	jsonData, err := json.Marshal(request)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+		return
+	}
+
+	resp, err := http.Post("http://localhost:5000/user",
+		"application/json", bytes.NewBuffer(jsonData))
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+		return
+	}
+	defer resp.Body.Close()
+
+	if resp.StatusCode != http.StatusOK {
+		response(ctx, 500, "internal_server_error", err)
+		return
+	}
+
+	response(ctx, 200, "user_created", err)
+}
+
+// @BasePath /
+// @Summary Update user
+// @Description Updates a user
+// @Tags User
+// @Produce json
+// @Param user body schemas.UpdateUserRequest true "User data to Update"
+// @Success 200 {object} schemas.UpdateUserResponse
+// @Failure 400 {string} string "bad_request"
+// @Failure 404 {string} string "user_not_found"
+// @Failure 500 {string} string "internal_server_error"
+// @Router /user [put]
+func UpdateUser(ctx *gin.Context) {
+	token, err := Auth()
+	if err != nil {
+		response(ctx, 500, "internal_server_error", nil)
+	}
+
+	request := schemas.UpdateUserRequest{}
+	if err := ctx.ShouldBindJSON(&request); err != nil {
+		ctx.JSON(400, gin.H{"error": err.Error()})
+		return
+	}
+
+	jsonData, err := json.Marshal(request)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+		return
+	}
+
+	req, err := http.NewRequest("PUT",
+		"http://localhost:5000/user",
+		bytes.NewBuffer(jsonData))
+	if err != nil {
+		response(ctx, 500, "internal_server_error", nil)
+		return
+	}
+
+	req.Header.Set("Content-Type", "application/json")
+	req.Header.Set("Authorization", "Bearer "+token)
+
+	client := &http.Client{}
+	resp, err := client.Do(req)
+	if err != nil {
+		response(ctx, 500, "internal_server_error", err)
+		return
+	}
+	defer resp.Body.Close()
+
+	if resp.StatusCode != http.StatusOK {
+		response(ctx, 500, "internal_server_error", err)
+		return
+	}
+
+	ctx.JSON(200, gin.H{"message": "user_updated"})
+}
 
 // @BasePath /
 // @Summary Find user by username
@@ -20,7 +117,7 @@ func GetUserByUsername(ctx *gin.Context) {
 
 	username := ctx.Query("username")
 
-	token, err := Login()
+	token, err := Auth()
 	if err != nil {
 		response(ctx, 500, "internal_server_error", nil)
 		return
@@ -48,7 +145,7 @@ func GetUserByUsername(ctx *gin.Context) {
 func GetUsers(ctx *gin.Context) {
 	ctx.Request.ParseMultipartForm(10 << 20)
 
-	token, err := Login()
+	token, err := Auth()
 	if err != nil {
 		response(ctx, 500, "internal_server_error", nil)
 		return
@@ -76,7 +173,7 @@ func GetUsers(ctx *gin.Context) {
 func DeleteUser(ctx *gin.Context) {
 	ctx.Request.ParseMultipartForm(10 << 20)
 
-	token, err := Login()
+	token, err := Auth()
 	if err != nil {
 		response(ctx, 500, "internal_server_error", nil)
 		return
